added more content to index

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,47 +1,63 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link href="./css/bootstrap.min.css" rel="stylesheet">
+  <link href="./css/bootstrap.min.css" rel="stylesheet">
 
 
-<title>Java EE Demostration</title>
+  <title>Java EE Demostration</title>
 </head>
+
 <body>
 
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
-            <div class="container-fluid">
-                 <a class="navbar-brand" href="#">Java EE</a>
-                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                      </li>
-                      <form class="d-flex bd-highlight justify-content-end">
-                          <button type="button" class="btn btn-primary">Login</button>
-                    </form>
-                      
-                    </ul>
-                  </div>
-            </div>
-        </nav>
-    </header>
+  <header>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Java EE</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+          </ul>
+          <form class="form-inline d-inline-flex bd-highlight justify-content-end">
+            <button type="button" class="btn btn-primary">Login</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </header>
 
 
-    <main class="container">
+  <main class="container-fluid">
+    <div class="row d-flex align-items-center">
+      <div class="col">
+        <h1 class="display-4">Hello, world!</h1>
+        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
+          featured content or information.</p>
+        <hr class="my-4">
+        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+      </div>
+      <div class="col">
+        <img src="./images/java-EE.png">
+      </div>
+    </div>
 
-    <h1>Hello QW</h1>
-    </main>
 
-<script src="./js/bootstrap.bundle.min.js"></script>
+
+  </main>
+
+  <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
